[metadata]
name = pangan

summary = Pangan test package
description-file =
    README.md
author = Amir Mofakhar
author-email = amir@mofakhar.info
home-page = https://github.com/pangan/pangan

classifier =
    Programming Language :: Python :: 3,
    License :: OSI Approved :: Apache Software License,
    Operating System :: OS Independent",

[entry_points]
console_scripts =
    pangan = pangan.app:launch

[files]
packages =
    pangan




[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source


